[package]

name = "tree-bench"
version = "0.0.1"
authors = ["Clark Gaebel <cgaebel@mozilla.com>"]

[profile.dev]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false  # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = true     # Controls `-C lto` for binaries and staticlibs

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 3
debug = true
rpath = false
lto = true

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true

# The documentation profile, used for `cargo doc`
[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
